--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuetify",
+  "name": "@koush/vuetify",
   "description": "Vue Material Component Framework",
   "version": "3.7.1",
   "author": {
